fix lobby not wrapping long text

--- a/src/client/app/lobby/lobby.component.scss
+++ b/src/client/app/lobby/lobby.component.scss
@@ -74,6 +74,7 @@
 
   .message {
     font-size: 1.3rem;
+    word-break: break-all;
 
     .timestamp {
       min-width: 80px;
